# todo-spec-driven-hackathon

./: .gitignore  .mcp.json  CLAUDE.md  Hackathon II - Todo Spec-Driven Development.md  skills-and-subagents.md
.claude/: settings.json  settings.local.json
.claude/agents/: agent-template.md  chatbot-creator-agent.md  frontend-nextjs-agents.md  mcp-server-creator-agent.md  mcp-server-expert-agent.md  tdd-agent.md
.claude/skills/: spec-writing.md
.specify/memory/: constitution.md
history/adr/: 001-ai-chatbot-architecture.md
phase-01/: README.md  pyproject.toml
phase-01/src/todo_app/: __init__.py  main.py
phase-01/src/todo_app/cli/: __init__.py  cli_interface.py
phase-01/src/todo_app/managers/: __init__.py  task_manager.py
phase-01/src/todo_app/models/: __init__.py  task.py
phase-01/src/todo_app/ui/: __init__.py  renderer.py
phase-01/tests/: __init__.py  test_user_story_1.py  test_user_story_2.py  test_user_story_3.py  test_user_story_4.py  test_user_story_5.py  test_user_story_6.py  test_user_story_7.py
phase-02/: README.md
phase-02/backend/: Dockerfile  README.md  docker-compose.yml  jwks.json  pyproject.toml
phase-02/backend/alembic/: env.py
phase-02/backend/alembic/versions/: 90fec3fe8659_create_tasks_table.py  910fed40876a_add_task_fields.py
phase-02/backend/src/: main.py
phase-02/backend/src/api/routes/: tasks.py
phase-02/backend/src/auth/: jwt.py
phase-02/backend/src/config/: settings.py
phase-02/backend/src/database/: database.py  init_db.py
phase-02/backend/src/models/: task.py
phase-02/backend/src/schemas/: task.py
phase-02/backend/src/services/: task_service.py
phase-02/backend/src/utils/: exceptions.py  logging.py  validation.py
phase-02/backend/tests/integration/: test_api_endpoints.py  test_workflow.py
phase-02/backend/tests/unit/: test_jwt.py  test_task_service.py
phase-02/frontend/: DEPLOYMENT.md  README.md  components.json  next.config.ts  package-lock.json  package.json
phase-03/: CHATBOT_IMPLEMENTATION_SUMMARY.md
phase-03/backend/: API_DOCS.md  Dockerfile  README.md  docker-compose.yml
phase-03/frontend/: DEPLOYMENT.md  components.json  package-lock.json
phase-03/mcp_server/: .env.example  Dockerfile  pyproject.toml
phase-03/mcp_server/src/mcp_server/: __init__.py  auth.py  config.py  database.py  main.py  models.py  tools.py
phase-03/mcp_server/tests/: conftest.py  test_comprehensive_mcp.py  test_comprehensive_mcp_pytest.py  test_mcp_endpoints.py  test_mcp_http.py  test_mcp_official.py  test_workflow_mcp_pytest.py
phase-03/mcp_server/tests/integration/: test_end_to_end.py
phase-04/backend/: pyproject.toml
phase-04/backend/alembic/: env.py
phase-04/backend/alembic/versions/: 11e8bef5d7c8_add_category_and_priority_fields_to_.py  967623eee52c_rename_conversations_messages_to_threads_thread_items.py
phase-04/backend/src/api/routes/: tasks.py
phase-04/backend/src/config/: settings.py
phase-04/backend/src/database/: database.py
phase-04/backend/src/services/: chatkit_server.py
phase-04/backend/src/todo_agents/: chat_agent.py
phase-04/backend/src/utils/: logging.py  validation.py
phase-04/backend/tests/integration/: test_api_endpoints.py  test_mcp_server.py  test_workflow.py
phase-04/backend/tests/unit/: test_chatkit_integration.py  test_jwt.py  test_mcp_integration.py  test_task_service.py
phase-04/frontend/: README.md  package-lock.json  package.json
phase-04/mcp_server/: README.md
(+232 files in other folders)
