[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.0",
    "fastapi[standard]>=0.127.0",
    "inline-snapshot>=0.31.1",
    "mcp-hmr>=0.0.3.2",
    "mcp[cli]>=1.25.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.29",
]

[project.scripts]
app = "src.mcp_server.main:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
